deploy: htw-imi-showtime/showtime-website@e480609864096f94050296acd61c38d8c90c6fa2

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4ede622 
+</p><p>AbbreviatedHash: e480609 
 </p><p>AuthorDate: 2024-07-26 
-</p><p>AuthorEmail: 95168446&#43;lauralgh@users.noreply.github.com 
-</p><p>AuthorName: lauralgh 
+</p><p>AuthorEmail: 57158200&#43;shirokonto@users.noreply.github.com 
+</p><p>AuthorName: Shiro Skrattberg 
 </p><p>CommitDate: 2024-07-26 
-</p><p>Hash: 4ede6221ca812b165fa305c78a22f16ed9a54d48 
-</p><p>Subject: M4 - final website version (#389) 
+</p><p>Hash: e480609864096f94050296acd61c38d8c90c6fa2 
+</p><p>Subject: M5 - Final Website Version (#391) 
 </p>
 
 
