deploy: htw-imi-showtime/showtime-website@c65a385b2e1593643b8e2c047bfd5e04d24cf66c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: e480609 
-</p><p>AuthorDate: 2024-07-26 
-</p><p>AuthorEmail: 57158200&#43;shirokonto@users.noreply.github.com 
-</p><p>AuthorName: Shiro Skrattberg 
-</p><p>CommitDate: 2024-07-26 
-</p><p>Hash: e480609864096f94050296acd61c38d8c90c6fa2 
-</p><p>Subject: M5 - Final Website Version (#391) 
+</p><p>AbbreviatedHash: c65a385 
+</p><p>AuthorDate: 2024-07-27 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2024-07-27 
+</p><p>Hash: c65a385b2e1593643b8e2c047bfd5e04d24cf66c 
+</p><p>Subject: STW: fork gh action deploy: run on all branches 
 </p>
 
 
