deploy: htw-imi-showtime/showtime-website@7a64ba8dc1c4213950d971a91a2199df2aa4e870

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: c65a385 
+</p><p>AbbreviatedHash: 7a64ba8 
 </p><p>AuthorDate: 2024-07-27 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: 136571790&#43;asliprinter@users.noreply.github.com 
+</p><p>AuthorName: Asli Nur Yazici 
 </p><p>CommitDate: 2024-07-27 
-</p><p>Hash: c65a385b2e1593643b8e2c047bfd5e04d24cf66c 
-</p><p>Subject: STW: fork gh action deploy: run on all branches 
+</p><p>Hash: 7a64ba8dc1c4213950d971a91a2199df2aa4e870 
+</p><p>Subject: B1 infinite zoom - new version (#396) 
 </p>
 
 
