--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -226,7 +226,7 @@
       
         <p><b>claim</b> =  </p>
         <p><b>abstract</b> =  </p>
-        <p><b>card_description = </b> (deprecated, use claim instead!) = Buckle up, you&#39;re going for a ride.</p>
+        <p><b>card_description = </b> (deprecated, use claim instead!) = An endless ride through ever-changing scenes in 3D.</p>
        
         <p><b>url</b>: <a href="/staging/ss24/bachelor/b1-infinite-zoom/">/staging/ss24/bachelor/b1-infinite-zoom/</a></p>
         <p><b>Disk Usage:</b>  
