deploy: htw-imi-showtime/showtime-website@d49724ada9300cd8a1f48b2579583e2bef2d513b

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: bfe5b9a 
-</p><p>AuthorDate: 2024-07-27 
-</p><p>AuthorEmail: 104562440&#43;justinpallas@users.noreply.github.com 
-</p><p>AuthorName: Justin Pallas 
-</p><p>CommitDate: 2024-07-27 
-</p><p>Hash: bfe5b9a31bd55f2dfceae3ffadae9f62ccae7ca2 
-</p><p>Subject: M3 Cognicity webpage - final version (#392) 
+</p><p>AbbreviatedHash: d49724a 
+</p><p>AuthorDate: 2024-07-28 
+</p><p>AuthorEmail: 107244309&#43;gerritbehrens@users.noreply.github.com 
+</p><p>AuthorName: Gerrit Behrens 
+</p><p>CommitDate: 2024-07-28 
+</p><p>Hash: d49724ada9300cd8a1f48b2579583e2bef2d513b 
+</p><p>Subject: M2 food4future - Added workflow page and screenshots  (#397) 
 </p>
 
 
