deploy: htw-imi-showtime/showtime-website@e7d505b4244d9e1c4f8bdcba472905a10a0c16e1

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d49724a 
-</p><p>AuthorDate: 2024-07-28 
-</p><p>AuthorEmail: 107244309&#43;gerritbehrens@users.noreply.github.com 
-</p><p>AuthorName: Gerrit Behrens 
-</p><p>CommitDate: 2024-07-28 
-</p><p>Hash: d49724ada9300cd8a1f48b2579583e2bef2d513b 
-</p><p>Subject: M2 food4future - Added workflow page and screenshots  (#397) 
+</p><p>AbbreviatedHash: e7d505b 
+</p><p>AuthorDate: 2024-07-30 
+</p><p>AuthorEmail: 72941883&#43;JonasTrenkler@users.noreply.github.com 
+</p><p>AuthorName: Jonas Trenkler 
+</p><p>CommitDate: 2024-07-30 
+</p><p>Hash: e7d505b4244d9e1c4f8bdcba472905a10a0c16e1 
+</p><p>Subject: B3 lunarfit (#398) 
 </p>
 
 
