--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -364,8 +364,8 @@ project_id = "B2"
         <p><b>supervisor:</b> David Koschnick (string)</p>
       
         <p><b>claim</b> =  Exercise in Harmony with Your Cycle</p>
-        <p><b>abstract</b> =  More than a fitness or period tracker, LunarFit helps athletes to better understand and adapt their training to their menstrual cycle. This lowers the risk of injury, aids regeneration and improves long-term performance gain.</p>
-        <p><b>card_description = </b> (deprecated, use claim instead!) = Exercise in Harmony with Your Cycle</p>
+        <p><b>abstract</b> =  More than a fitness or period tracker, LunarFit helps athletes better understand and adapt their training to their menstrual cycle. This reduces the risk of injury, aids in recovery, and supports long-term performance development.</p>
+        <p><b>card_description = </b> (deprecated, use claim instead!) = </p>
        
         <p><b>url</b>: <a href="/staging/ss24/bachelor/b3-lunarfit/">/staging/ss24/bachelor/b3-lunarfit/</a></p>
         <p><b>Disk Usage:</b>  
