deploy: htw-imi-showtime/showtime-website@7b06aefeb3e191cd7fefff449fb87d731b8802f1

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 4a1bfee 
+</p><p>AbbreviatedHash: 7b06aef 
 </p><p>AuthorDate: 2024-07-30 
-</p><p>AuthorEmail: 53829199&#43;Nemozi@users.noreply.github.com 
-</p><p>AuthorName: Nemozi 
+</p><p>AuthorEmail: 136571790&#43;asliprinter@users.noreply.github.com 
+</p><p>AuthorName: Asli Nur Yazici 
 </p><p>CommitDate: 2024-07-30 
-</p><p>Hash: 4a1bfeeace7a10c04fd6a6be3d8c98f81de2b8ca 
-</p><p>Subject: B2: Fix tryout (#401) 
+</p><p>Hash: 7b06aefeb3e191cd7fefff449fb87d731b8802f1 
+</p><p>Subject: B1- infinite-zoom: small changes in context (#400) 
 </p>
 
 
