--- a/ss24/bachelor/b1-infinite-zoom/index.html
+++ b/ss24/bachelor/b1-infinite-zoom/index.html
@@ -651,7 +651,9 @@
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        Our mission is to create an immersive and endlessly engaging experience. We aim to develop a game that not only entertains but also inspires players to explore the infinite possibilities of a dynamic 3D world.
+        <p>The main task of this project was to create a constant zoom effect in a 3D environment that evolves with time and never stops. We wanted to make this experience more engaging for the audience, so we implemented a game mode where the users must avoid the obstacles that come in their way.</p>
+<p>Our aim is to develop a game that not only entertains but also inspires players to explore the infinite possibilities of a dynamic 3D world.</p>
+
     </div>
 </section>
 
@@ -663,7 +665,7 @@
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        We are a motivated team of five, each bringing unique skills and creativity to the project.
+        We are a motivated team of five imi students, each bringing unique skills and creativity to the project.
     </div>
 </section>
 
