deploy: htw-imi-showtime/showtime-website@d7bd446143058dc13583b04a57463bca9334af44

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 7b06aef 
+</p><p>AbbreviatedHash: d7bd446 
 </p><p>AuthorDate: 2024-07-30 
-</p><p>AuthorEmail: 136571790&#43;asliprinter@users.noreply.github.com 
-</p><p>AuthorName: Asli Nur Yazici 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-30 
-</p><p>Hash: 7b06aefeb3e191cd7fefff449fb87d731b8802f1 
-</p><p>Subject: B1- infinite-zoom: small changes in context (#400) 
+</p><p>Hash: d7bd446143058dc13583b04a57463bca9334af44 
+</p><p>Subject: Release Train 3: small fixes, remove Logo deserts 
 </p>
 
 
