--- a/ws23/debug/index.html
+++ b/ws23/debug/index.html
@@ -589,7 +589,7 @@ project_id = "M3"
         <p><b>title:</b> = Aquasolace</p>
         <p><b>subtitle:</b> = Gaming for Future: A video game about water scarcity in Brandenburg</p>
         <p><b>team:</b> [Eliot Hoff  Kenneth Englisch Cong Nguyen-Dinh Adib Ghassani Waluya] (string)</p>
-        <p><b>supervisor:</b> David Mueller (string)</p>
+        <p><b>supervisor:</b> David Müller (string)</p>
       
         <p><b>claim</b> =  </p>
         <p><b>abstract</b> =  </p>
