deploy: htw-imi-showtime/showtime-website@263d8dd405cf5fe414851c414b30106315a4eb29

--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -581,7 +581,7 @@ project_id = "M1"
         <p><b>title:</b> = Ecospire</p>
         <p><b>subtitle:</b> = Alternative food sources for our future</p>
         <p><b>team:</b> [Gerrit Behrens Diro Baloska Yosua Sentosa Hasan Alkurdi] (string)</p>
-        <p><b>supervisor:</b> Carsten Busch (string)</p>
+        <p><b>supervisor:</b> Prof. Dr. Carsten Busch (string)</p>
       
         <p><b>claim</b> =  </p>
         <p><b>abstract</b> =  </p>
