deploy: htw-imi-showtime/showtime-website@26ebdc2463895cafa5e2bba19b5295ce53412d75

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 263d8dd 
+</p><p>AbbreviatedHash: 26ebdc2 
 </p><p>AuthorDate: 2024-07-30 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2024-07-30 
-</p><p>Hash: 263d8dd405cf5fe414851c414b30106315a4eb29 
-</p><p>Subject: consistent titles 
+</p><p>Hash: 26ebdc2463895cafa5e2bba19b5295ce53412d75 
+</p><p>Subject: Release Train 3: small fixes, remove logo deserts 
 </p>
 
 
