deploy: htw-imi-showtime/showtime-website@a82523d0a440c1f1e4c039cf5a15c800a1097997

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 26ebdc2 
-</p><p>AuthorDate: 2024-07-30 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2024-07-30 
-</p><p>Hash: 26ebdc2463895cafa5e2bba19b5295ce53412d75 
-</p><p>Subject: Release Train 3: small fixes, remove logo deserts 
+</p><p>AbbreviatedHash: a82523d 
+</p><p>AuthorDate: 2024-07-31 
+</p><p>AuthorEmail: 72941883&#43;JonasTrenkler@users.noreply.github.com 
+</p><p>AuthorName: Jonas Trenkler 
+</p><p>CommitDate: 2024-07-31 
+</p><p>Hash: a82523d0a440c1f1e4c039cf5a15c800a1097997 
+</p><p>Subject: B3 Lunarfit: fix preview image missing (typo) (#402) 
 </p>
 
 
