--- a/ss24/bachelor/b3-lunarfit/index.html
+++ b/ss24/bachelor/b3-lunarfit/index.html
@@ -704,7 +704,7 @@ All of this allows to make more informed decisions and communicate better with t
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>The foundation of our project was provided by the Institute of Sports Science at the University of Bern, giving us a scientific basis to build upon. They initially presented their idea using a Miro Board, setting the stage for our development process. As we progressed, we continuously refined and expanded the concept, ensuring it evolved effectively the project.</p>
+        <p>The foundation of our project was provided by the Institute of Sports Science at the University of Bern, giving us a scientific basis to build upon. They initially presented their idea using a Miro Board, setting the stage for our development process. As we progressed, we continuously refined and expanded the concept, ensuring it evolved effectively throughout the project.</p>
 <p>Before officially starting, we conducted a market analysis to assess the landscape and understand user requirements. Using the insights gained, we defined a set of features and created database and API schemas and clickable mockups in Figma to visualize the app&rsquo;s functionality.</p>
 <p>Next, we evaluated different tech stacks to identify the one that would best support our ideas. We then employed an agile development process, holding weekly meetings to maintain flexibility and respond to feedback quickly. This iterative approach allowed us to continuously optimize our ideas, ensuring it was both functional and user-friendly.</p>
 
