deploy: htw-imi-showtime/showtime-website@8f732be98a80e6d9a9fa44e04b6120fd1cd92af8

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: a82523d 
-</p><p>AuthorDate: 2024-07-31 
-</p><p>AuthorEmail: 72941883&#43;JonasTrenkler@users.noreply.github.com 
-</p><p>AuthorName: Jonas Trenkler 
-</p><p>CommitDate: 2024-07-31 
-</p><p>Hash: a82523d0a440c1f1e4c039cf5a15c800a1097997 
-</p><p>Subject: B3 Lunarfit: fix preview image missing (typo) (#402) 
+</p><p>AbbreviatedHash: 8f732be 
+</p><p>AuthorDate: 2024-08-01 
+</p><p>AuthorEmail: 52156092&#43;kennethenglisch@users.noreply.github.com 
+</p><p>AuthorName: Kenneth Englisch 
+</p><p>CommitDate: 2024-08-01 
+</p><p>Hash: 8f732be98a80e6d9a9fa44e04b6120fd1cd92af8 
+</p><p>Subject: M1 - last changes for the showtime (#407) 
 </p>
 
 
