--- a/ss24/master/m1-gaming-for-future/features/index.html
+++ b/ss24/master/m1-gaming-for-future/features/index.html
@@ -650,17 +650,26 @@ M1
     <div class="spacer"></div>
     <div class="content">
         <ul>
-<li><strong>Roles</strong></li>
+<li><strong>Supervised tile based gridmap interactions</strong></li>
 </ul>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis neque id vulputate malesuada. Quisque dignissim finibus urna sed sagittis.</p>
+<p>Map interactions are controlled and supervised in order to restrict specific player interactions, removing some of the previous sandbox-aspect of the game.</p>
 <ul>
-<li><strong>Game-Flow</strong></li>
+<li><strong>Ground water level sensitive game winning conditions</strong></li>
 </ul>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis neque id vulputate malesuada. Quisque dignissim finibus urna sed sagittis.</p>
+<p>Player actions directly influence groundwater levels. These influence changes are computed by respecting a data-table though and built to try and mimic somereal-life behavior in the environment.</p>
 <ul>
-<li><strong>Voting Systems</strong></li>
+<li><strong>Reviving species</strong></li>
 </ul>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis neque id vulputate malesuada. Quisque dignissim finibus urna sed sagittis.</p>
+<p>Such objectives are displayed in the form of quests and can be achieved in the game by modifying the biomes configuration on the map and applying the right configurations and some other hidden conditions.</p>
+<ul>
+<li><strong>Suitable habitat identification</strong></li>
+</ul>
+<p>Identifying complex habitats that can be considered suitable for a specie appeared quite challenging and asked many experiments.
+Our actual solution uses a flood-fill algorithm and allow a fluid a peridodic update of the potential suitable habitats for the species.</p>
+<ul>
+<li><strong>Localization</strong></li>
+</ul>
+<p>The game is supported in English &amp; German language version to provide better accessiblity.</p>
 
     </div>
 </section>
