--- a/ss24/master/m1-gaming-for-future/index.html
+++ b/ss24/master/m1-gaming-for-future/index.html
@@ -670,10 +670,13 @@ M1
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Our team consists of five IMI-Master students.</p>
+        Our team consists of five IMI-Master students.
+    </div>
+</section>
+
 <section class="gallery">
     <figure class="team-member">
-    <img src="/staging/ss24/master/m1-gaming-for-future/team_elliot.jpg" alt="Portrait of Eliot">
+    <img src="/staging/ss24/master/m1-gaming-for-future/team_eliot.jpg" alt="Portrait of Eliot">
     <figcaption>Eliot</figcaption>
 </figure>
 <figure class="team-member">
@@ -692,8 +695,7 @@ M1
     <img src="/staging/ss24/master/m1-gaming-for-future/team_sebastian.jpg" alt="Portrait of Sebastian">
     <figcaption>Sebastian</figcaption>
 </figure>
-</section>
-    </div>
+
 </section>
 
 <section>
@@ -718,6 +720,7 @@ M1
     <ul>
       <li>Game Development</li>
       <li>UI/UX Design</li>
+      <li>Website</li>
     </ul>
   </div>
   <div style="flex: 1; min-width: 239px; max-width: 239px; margin: 10px;">
