deploy: htw-imi-showtime/showtime-website@065f814b084361b8fc841582224770dca9e9c5c6

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 8f732be 
+</p><p>AbbreviatedHash: 065f814 
 </p><p>AuthorDate: 2024-08-01 
-</p><p>AuthorEmail: 52156092&#43;kennethenglisch@users.noreply.github.com 
-</p><p>AuthorName: Kenneth Englisch 
+</p><p>AuthorEmail: 167428823&#43;PaulSchiffner@users.noreply.github.com 
+</p><p>AuthorName: PaulSchiffner 
 </p><p>CommitDate: 2024-08-01 
-</p><p>Hash: 8f732be98a80e6d9a9fa44e04b6120fd1cd92af8 
-</p><p>Subject: M1 - last changes for the showtime (#407) 
+</p><p>Hash: 065f814b084361b8fc841582224770dca9e9c5c6 
+</p><p>Subject: B4 sempy last changes (#406) 
 </p>
 
 
