--- a/ss24/bachelor/b4-sempy/features/index.html
+++ b/ss24/bachelor/b4-sempy/features/index.html
@@ -657,10 +657,14 @@ B4
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Our SEMPY Button offers a relaxed shopping experience that provides customers with recommendations based on the information from the three major platforms: idealo, Amazon, and YouTube. Whether the customer is interested in products like a &ldquo;Victorinox Huntsman&rdquo;, an &ldquo;MSR Hubba Hubba 2 NX&rdquo;, or &ldquo;Apple AirPods 3&rdquo;, the SEMPY-AI Tool caters to the customer&rsquo;s individual needs.</p>
+        <figure>
+    <img src="/staging/ss24/bachelor/b4-sempy/button.jpg" alt="Screenshot vom Button">
+<figcaption>SEMPY-Button on the idealo Website.</figcaption>
+</figure>
+<p>Our SEMPY Button offers a relaxed shopping experience that provides customers with recommendations based on the information from the three major platforms: idealo, Amazon, and YouTube. Whether the customer is interested in products like a &ldquo;Victorinox Huntsman&rdquo;, an &ldquo;MSR Hubba Hubba 2 NX&rdquo;, or &ldquo;Apple AirPods 3&rdquo;, the SEMPY-AI Tool caters to the customer&rsquo;s individual needs.</p>
 <figure>
     <img src="/staging/ss24/bachelor/b4-sempy/screenbildmodaln.jpg" alt="Screenshot vom Modal">
-<figcaption>Screenshot of SEMPY-modal on the idealo Website.</figcaption>
+<figcaption>SEMPY-modal on the idealo Website.</figcaption>
 </figure>
 <p>We take information from idealo, YouTube and Amazon and give them to the OpenAi to process and summarize them. It then generates a text with all the important information in an overview with pros and cons, a short summary of customer reviews, a review video, FAQ&rsquo;s and a recommendation of a target audience.</p>
 
