deploy: htw-imi-showtime/showtime-website@5f128c62ba0540f432f1cc7eef97b7164eca8895

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -267,7 +267,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:33</p>
                 <div class="bachelor">
-                    <h3 class="no-underscore">B5 - PAM: Project Modeling and Management</h3>
+                    <h3 class="no-underscore">B5 - PAM: Process Modeling and Management</h3>
                     
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ss24/bachelor/b5-pam/">-> Project_Details</a>
