--- a/ss24/bachelor/b5-pam/features/index.html
+++ b/ss24/bachelor/b5-pam/features/index.html
@@ -574,7 +574,7 @@ B5
             <h1>
                 <span class="type">B5 Bachelor</span>
                 PAM
-             <span class="subtitle bachelor">Project Modeling and Management</span>
+             <span class="subtitle bachelor">Process Modeling and Management</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
