--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -127,7 +127,7 @@
 
     <div >
         <a href="/staging/ss24/bachelor/b5-pam/">B5 PAM</a>
-         - <small>Project Modeling and Management
+         - <small>Process Modeling and Management
          </small><a href="#B5_meta_list">&darr;</a>
     </div>
 
@@ -469,13 +469,13 @@ project_id = "B4"
     <h4> Bachelor </h4>
         <p><b>project_id:</b> B5</p>
         <p><b>title:</b> = PAM</p>
-        <p><b>subtitle:</b> = Project Modeling and Management</p>
+        <p><b>subtitle:</b> = Process Modeling and Management</p>
         <p><b>team:</b> [Margarita Boiko Hamzeh Hamzeh Anh Phuc Hoang Lukas Oswald] ([]string)</p>
         <p><b>supervisor:</b> [Dr. Sue-Ann Bäsler Martin Singer Vu Minh Le Mariam Maisuradze] ([]string)</p>
       
         <p><b>claim</b> =  Redesigning and Improving a Tool to simplify the creation and organisation of Process Diagrams in the Business Process Modelling Notation</p>
         <p><b>abstract</b> =  PAM is a tool that was originally developed for GlobalCT by Students of the Leibniz Universität in Hannover. The Tool&#39;s purpose is to allow for the simple creation of Process Diagrams using a simple interface, as well the saving and exporting of those diagrams in various formats as required, organizing them depending on the preferences of the creators by allowing for a custom repository structure of folders and sub-folders.It also has an internal organization scheme following a simple folder/file format. However, it was rather simple, focusing on the basic features initially. That&#39;s where we came in.</p>
-        <p><b>card_description = </b> (deprecated, use claim instead!) = Upgrading, Reworking and rewriting a Project Tool for a certain Company</p>
+        <p><b>card_description = </b> (deprecated, use claim instead!) = Upgrading, Reworking and rewriting a Process Tool for a certain Company</p>
        
         <p><b>url</b>: <a href="/staging/ss24/bachelor/b5-pam/">/staging/ss24/bachelor/b5-pam/</a></p>
         <p><b>Disk Usage:</b>  
@@ -519,7 +519,7 @@ project_id = "B4"
                 [[slot]]
 time = "10:00"
 project_id = "B5"
-# title = "B5 - PAM: Project Modeling and Management"
+# title = "B5 - PAM: Process Modeling and Management"
 # projectDetail = "/staging/ss24/bachelor/b5-pam/"
 # class = "bachelor"
 
@@ -858,7 +858,7 @@ project_id = "B4"
 [[slot]]
 time = "10:00"
 project_id = "B5"
-# title = "B5 - PAM: Project Modeling and Management"
+# title = "B5 - PAM: Process Modeling and Management"
 # projectDetail = "/staging/ss24/bachelor/b5-pam/"
 # class = "bachelor"
 
