--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 065f814 
+</p><p>AbbreviatedHash: 5f128c6 
 </p><p>AuthorDate: 2024-08-01 
-</p><p>AuthorEmail: 167428823&#43;PaulSchiffner@users.noreply.github.com 
-</p><p>AuthorName: PaulSchiffner 
+</p><p>AuthorEmail: 123189839&#43;LVOswald@users.noreply.github.com 
+</p><p>AuthorName: LVOswald 
 </p><p>CommitDate: 2024-08-01 
-</p><p>Hash: 065f814b084361b8fc841582224770dca9e9c5c6 
-</p><p>Subject: B4 sempy last changes (#406) 
+</p><p>Hash: 5f128c62ba0540f432f1cc7eef97b7164eca8895 
+</p><p>Subject: B5: New Techstack, new Images, new personal reflections and future (#405) 
 </p>
 
 
