--- a/ss24/bachelor/b5-pam/techstack/index.html
+++ b/ss24/bachelor/b5-pam/techstack/index.html
@@ -574,7 +574,7 @@ B5
             <h1>
                 <span class="type">B5 Bachelor</span>
                 PAM
-             <span class="subtitle bachelor">Project Modeling and Management</span>
+             <span class="subtitle bachelor">Process Modeling and Management</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
@@ -671,7 +671,7 @@ B5
 
 
 <figure>
-    <img src="/staging/ss24/bachelor/b5-pam/techstack.png" alt="Tech Stack">
+    <img src="/staging/ss24/bachelor/b5-pam/techstack2.png" alt="Tech Stack">
 
 </figure>
 
