deploy: htw-imi-showtime/showtime-website@27ef11d2778b3507aca6ac8e34d893f5a263eacd

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 5f128c6 
-</p><p>AuthorDate: 2024-08-01 
-</p><p>AuthorEmail: 123189839&#43;LVOswald@users.noreply.github.com 
-</p><p>AuthorName: LVOswald 
-</p><p>CommitDate: 2024-08-01 
-</p><p>Hash: 5f128c62ba0540f432f1cc7eef97b7164eca8895 
-</p><p>Subject: B5: New Techstack, new Images, new personal reflections and future (#405) 
+</p><p>AbbreviatedHash: 27ef11d 
+</p><p>AuthorDate: 2024-09-26 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2024-09-26 
+</p><p>Hash: 27ef11d2778b3507aca6ac8e34d893f5a263eacd 
+</p><p>Subject: Merge branch &#39;main&#39; of github.com:htw-imi-showtime/showtime-website 
 </p>
 
 
