--- a/ss24/project_overview/index.html
+++ b/ss24/project_overview/index.html
@@ -903,8 +903,38 @@ project_id = "M5"
 # class = "master"
 
 
-</main>
+
 </pre></small>
+<hr/>
+<small>
+<b>for bt:</b>
+<pre>
+"B1": - "B1 - 3D Infinite Zoom Infinite Zoom in 3D",
+
+"B2": - "B2 - MakeSign Digital Signage for the IDiA Makerspace",
+
+"B3": - "B3 - LunarFit ",
+
+"B4": - "B4 - SEMPY AI-Research Agent",
+
+"B5": - "B5 - PAM Process Modeling and Management",
+
+"M1": - "M1 - Aquasolace Gaming for Future II: Turning the simulation into a game",
+
+"M2": - "M2 - Ecospire Alternative food sources for our future",
+
+"M3": - "M3 - CogniCity A Serious Game Suite to help enhance cognitive abilities",
+
+"M4": - "M4 - OrgXtract ",
+
+"M5": - "M5 - Capsearch Bridging Talent and Career",
+
+
+</pre>
+</small>
+</main>
+
+
 
 <footer>
   
