--- a/ws23/debug/index.html
+++ b/ws23/debug/index.html
@@ -756,8 +756,38 @@ project_id = "M5"
 # class = "master"
 
 
-</main>
+
 </pre></small>
+<hr/>
+<small>
+<b>for bt:</b>
+<pre>
+"B1": - "B1 - Peek Peek",
+
+"B2": - "B2 - Mobile Multitouch Multiplayer - Spike Shielders ",
+
+"B4": - "B4 - HypnoBuddy ",
+
+"B5": - "B5 - SmartLibrary - It&#39;s A Match! ",
+
+"B6": - "B6 - AvataVR ",
+
+"B7": - "B7 - Vision.IO ",
+
+"M1": - "M1 - Somethin.AR ",
+
+"M3": - "M3 - LEP ",
+
+"M4": - "M4 - Aquasolace Gaming for Future: A video game about water scarcity in Brandenburg",
+
+"M5": - "M5 - mov.io ",
+
+
+</pre>
+</small>
+</main>
+
+
 
 <footer>
   
