deploy: htw-imi-showtime/showtime-website@2ef6516c335437878f052a6ccbdd4240671b8878

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 27ef11d 
-</p><p>AuthorDate: 2024-09-26 
+</p><p>AbbreviatedHash: 2ef6516 
+</p><p>AuthorDate: 2024-10-10 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2024-09-26 
-</p><p>Hash: 27ef11d2778b3507aca6ac8e34d893f5a263eacd 
-</p><p>Subject: Merge branch &#39;main&#39; of github.com:htw-imi-showtime/showtime-website 
+</p><p>CommitDate: 2024-10-10 
+</p><p>Hash: 2ef6516c335437878f052a6ccbdd4240671b8878 
+</p><p>Subject: winter date 
 </p>
 
 
