deploy: htw-imi-showtime/showtime-website@7fb344978f26bdb73a43ceac69b6c87b3e2c0c76

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 2ef6516 
-</p><p>AuthorDate: 2024-10-10 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2024-10-10 
-</p><p>Hash: 2ef6516c335437878f052a6ccbdd4240671b8878 
-</p><p>Subject: winter date 
+</p><p>AbbreviatedHash: 7fb3449 
+</p><p>AuthorDate: 2024-12-12 
+</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
+</p><p>AuthorName: Charlotte John 
+</p><p>CommitDate: 2024-12-12 
+</p><p>Hash: 7fb344978f26bdb73a43ceac69b6c87b3e2c0c76 
+</p><p>Subject: Update documentation and templates (#408) 
 </p>
 
 
