deploy: htw-imi-showtime/showtime-website@e2c736256e3990ad409b8da9cb808b7b817c9086

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 7fb3449 
-</p><p>AuthorDate: 2024-12-12 
-</p><p>AuthorEmail: 147180494&#43;flashwing-04@users.noreply.github.com 
-</p><p>AuthorName: Charlotte John 
-</p><p>CommitDate: 2024-12-12 
-</p><p>Hash: 7fb344978f26bdb73a43ceac69b6c87b3e2c0c76 
-</p><p>Subject: Update documentation and templates (#408) 
+</p><p>AbbreviatedHash: e2c7362 
+</p><p>AuthorDate: 2025-01-19 
+</p><p>AuthorEmail: 166652253&#43;annadeus@users.noreply.github.com 
+</p><p>AuthorName: anna 
+</p><p>CommitDate: 2025-01-19 
+</p><p>Hash: e2c736256e3990ad409b8da9cb808b7b817c9086 
+</p><p>Subject: Changed readme (#409) 
 </p>
 
 
