deploy: htw-imi-showtime/showtime-website@564a1520f836c6627c08ce4b4a9059f8f9670558

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: d924544 
+</p><p>AbbreviatedHash: 564a152 
 </p><p>AuthorDate: 2025-01-19 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-01-19 
-</p><p>Hash: d9245445f1a2da51c6a39308d75c8829fb6649b2 
-</p><p>Subject: fix semester title in overview 
+</p><p>Hash: 564a1520f836c6627c08ce4b4a9059f8f9670558 
+</p><p>Subject: allow 4th character in file name extensions 
 </p>
 
 
