deploy: htw-imi-showtime/showtime-website@4c3ba9959c9f42d7617da845d2168675d6876e11

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 564a152 
-</p><p>AuthorDate: 2025-01-19 
+</p><p>AbbreviatedHash: 4c3ba99 
+</p><p>AuthorDate: 2025-01-20 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-01-19 
-</p><p>Hash: 564a1520f836c6627c08ce4b4a9059f8f9670558 
-</p><p>Subject: allow 4th character in file name extensions 
+</p><p>CommitDate: 2025-01-20 
+</p><p>Hash: 4c3ba9959c9f42d7617da845d2168675d6876e11 
+</p><p>Subject: fix review 
 </p>
 
 
