deploy: htw-imi-showtime/showtime-website@8d27c900aca966020304f137326ed6d1aebc2b8c

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: ae2052e 
-</p><p>AuthorDate: 2025-01-20 
-</p><p>AuthorEmail: 122614930&#43;vivigl@users.noreply.github.com 
-</p><p>AuthorName: vivigl 
-</p><p>CommitDate: 2025-01-20 
-</p><p>Hash: ae2052e2575b67bb24b0a15fe03ba497b93a05e7 
-</p><p>Subject: B5 - first draft of page (#411) 
+</p><p>AbbreviatedHash: 8d27c90 
+</p><p>AuthorDate: 2025-01-21 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2025-01-21 
+</p><p>Hash: 8d27c900aca966020304f137326ed6d1aebc2b8c 
+</p><p>Subject: STW: Little Improvements for 1st Release WS24/25 (#414) 
 </p>
 
 
