deploy: htw-imi-showtime/showtime-website@f970eb7f1897084ba0bbed24265fe0d48d46f2f0

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 51697e1 
+</p><p>AbbreviatedHash: f970eb7 
 </p><p>AuthorDate: 2025-01-23 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-01-23 
-</p><p>Hash: 51697e16babda56d9e7cec1d3cd1a187b9e38402 
-</p><p>Subject: STW: improve new semester creation (#419) 
+</p><p>Hash: f970eb7f1897084ba0bbed24265fe0d48d46f2f0 
+</p><p>Subject: anchor link to m2 as it&#39;s there now 
 </p>
 
 
