deploy: htw-imi-showtime/showtime-website@55153e04adb01719e4cc3d95825e94628d7bb8a4

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: b58cd03 
+</p><p>AbbreviatedHash: 55153e0 
 </p><p>AuthorDate: 2025-01-23 
-</p><p>AuthorEmail: 85528467&#43;jameshnl232@users.noreply.github.com 
-</p><p>AuthorName: DumpyBird 
+</p><p>AuthorEmail: 104562440&#43;justinpallas@users.noreply.github.com 
+</p><p>AuthorName: Justin Pallas 
 </p><p>CommitDate: 2025-01-23 
-</p><p>Hash: b58cd03ecdee252b7bff379ac113b7a12d4ea61b 
-</p><p>Subject: B6 - first release (#417) 
+</p><p>Hash: 55153e04adb01719e4cc3d95825e94628d7bb8a4 
+</p><p>Subject: M3 ErgoScape - Small Fixes (#420) 
 </p>
 
 
