deploy: htw-imi-showtime/showtime-website@73f7efe10a548a592177d08bee78fc6ebbebdc65

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: b52c2a7 
-</p><p>AuthorDate: 2025-01-23 
+</p><p>AbbreviatedHash: 73f7efe 
+</p><p>AuthorDate: 2025-01-24 
 </p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
 </p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-01-23 
-</p><p>Hash: b52c2a7d3d5e44b4da31216cdd18634067debff3 
-</p><p>Subject: STW - last little changes for release train 1 (#422) 
+</p><p>CommitDate: 2025-01-24 
+</p><p>Hash: 73f7efe10a548a592177d08bee78fc6ebbebdc65 
+</p><p>Subject: introduce exceptions to size check (#429) 
 </p>
 
 
