deploy: htw-imi-showtime/showtime-website@03fa8ea58a1d3aedd2bb8cbeffc9eb530cbd7663

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 73f7efe 
+</p><p>AbbreviatedHash: 03fa8ea 
 </p><p>AuthorDate: 2025-01-24 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
+</p><p>AuthorEmail: 104562440&#43;justinpallas@users.noreply.github.com 
+</p><p>AuthorName: Justin Pallas 
 </p><p>CommitDate: 2025-01-24 
-</p><p>Hash: 73f7efe10a548a592177d08bee78fc6ebbebdc65 
-</p><p>Subject: introduce exceptions to size check (#429) 
+</p><p>Hash: 03fa8ea58a1d3aedd2bb8cbeffc9eb530cbd7663 
+</p><p>Subject: fix typo (#427) 
 </p>
 
 
