deploy: htw-imi-showtime/showtime-website@181453de08b5059bb236b9be9c78719365aa00c9

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 03fa8ea 
+</p><p>AbbreviatedHash: 181453d 
 </p><p>AuthorDate: 2025-01-24 
-</p><p>AuthorEmail: 104562440&#43;justinpallas@users.noreply.github.com 
-</p><p>AuthorName: Justin Pallas 
+</p><p>AuthorEmail: 96808045&#43;namkhanh-nguyen@users.noreply.github.com 
+</p><p>AuthorName: Nam 
 </p><p>CommitDate: 2025-01-24 
-</p><p>Hash: 03fa8ea58a1d3aedd2bb8cbeffc9eb530cbd7663 
-</p><p>Subject: fix typo (#427) 
+</p><p>Hash: 181453de08b5059bb236b9be9c78719365aa00c9 
+</p><p>Subject: B3 Helm sucht Kopf final website commented out until done (#425) 
 </p>
 
 
