--- a/schedule/index.html
+++ b/schedule/index.html
@@ -223,7 +223,7 @@ a project fair in the afternoon.</p>
             <li>
                 <p>10:19</p>
                 <div class="bachelor">
-                    <h3 class="no-underscore">B3 - Helm sucht Kopf: Recruiting für die Berliner Feuerwehr</h3>
+                    <h3 class="no-underscore">B3 - Helm sucht Kopf: Recruiting for the Berlin Fire Department</h3>
                     Alexander Kramer, Carsten Busch
                     
                     <a href="https://htw-imi-showtime.github.io/staging/ws24/bachelor/b3-helm-sucht-kopf/">-> Project_Details</a>
