--- a/ws24/project_overview/index.html
+++ b/ws24/project_overview/index.html
@@ -120,7 +120,7 @@
 
     <div >
         <a href="/staging/ws24/bachelor/b3-helm-sucht-kopf/">B3 Helm sucht Kopf</a>
-         - <small>Recruiting für die Berliner Feuerwehr
+         - <small>Recruiting for the Berlin Fire Department
          </small><a href="#B3_meta_list">&darr;</a>
     </div>
 
@@ -376,11 +376,11 @@ project_id = "B2"
     <h4> Bachelor </h4>
         <p><b>project_id:</b> B3</p>
         <p><b>title:</b> = Helm sucht Kopf</p>
-        <p><b>subtitle:</b> = Recruiting für die Berliner Feuerwehr</p>
+        <p><b>subtitle:</b> = Recruiting for the Berlin Fire Department</p>
         <p><b>team:</b> [Christoph Friedrich Duha Kasem Maria Ivanova Nam Khanh Nguyen Phuong Nhi Phan Sandip Sarraf Sara Tahmasebi Adar] ([]string)</p>
         <p><b>supervisor:</b> [Alexander Kramer Carsten Busch] ([]string)</p>
       
-        <p><b>claim</b> =  Everyone can be a hero, but even heroes need guidance.</p>
+        <p><b>claim</b> =  Everyone can be a hero, but even heroes need guidance. We help prospective firefighters navigate their path to the Berliner Feuerwehr and explore available opportunities.</p>
         <p><b>abstract</b> =  We collaborated with #HelmSuchtKopf, a campaign by the Berlin Fire Department, to create a solution that simplifies obtaining information and helps individuals find the right entry opportunities through gamification and interactivity. As part of this initiative, we developed a website with innovative features and tools, making it easier for individuals to explore their ideal entry path in an intuitive way.</p>
         <p><b>card_description = </b> (deprecated, use claim instead!) = </p>
        
@@ -426,7 +426,7 @@ project_id = "B2"
                 [[slot]]
 time = "10:00"
 project_id = "B3"
-# title = "B3 - Helm sucht Kopf: Recruiting für die Berliner Feuerwehr"
+# title = "B3 - Helm sucht Kopf: Recruiting for the Berlin Fire Department"
 # projectDetail = "/staging/ws24/bachelor/b3-helm-sucht-kopf/"
 # class = "bachelor"
 
@@ -778,7 +778,7 @@ project_id = "B2"
 [[slot]]
 time = "10:00"
 project_id = "B3"
-# title = "B3 - Helm sucht Kopf: Recruiting für die Berliner Feuerwehr"
+# title = "B3 - Helm sucht Kopf: Recruiting for the Berlin Fire Department"
 # projectDetail = "/staging/ws24/bachelor/b3-helm-sucht-kopf/"
 # class = "bachelor"
 
@@ -843,7 +843,7 @@ project_id = "M3"
 
 "B2": - "B2 - VoiSum Use AI to summarize voice messages",
 
-"B3": - "B3 - Helm sucht Kopf Recruiting für die Berliner Feuerwehr",
+"B3": - "B3 - Helm sucht Kopf Recruiting for the Berlin Fire Department",
 
 "B4": - "B4 - John the Explorer AI Travel Advisor",
 
