--- a/ws24/bachelor/b3-helm-sucht-kopf/development/index.html
+++ b/ws24/bachelor/b3-helm-sucht-kopf/development/index.html
@@ -654,7 +654,7 @@ B3
             <h1>
                 <span class="type">B3 Bachelor</span>
                 Helm sucht Kopf
-             <span class="subtitle bachelor">Recruiting für die Berliner Feuerwehr</span>
+             <span class="subtitle bachelor">Recruiting for the Berlin Fire Department</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
@@ -774,33 +774,10 @@ B3
     </h3>
     <div class="spacer"></div>
     <div class="content">
-        <p>Starting B3 - Berliner Feuerwehr: Helm Sucht Kopf, we began by analyzing the current fire
-department website to pinpoint its pain points and areas for improvement. Our key questions
-were: What’s not working? What could be improved? And how can we create solutions that
-meet the needs of users, stakeholders, and us?</p>
-<p>To better understand user behavior, we examined website statistics provided by the fire
-department, such as time spent on various pages and points of disengagement. Additionally, we
-conducted a survey with 16 individuals who had applied within the last four years. We asked
-them about the challenges they faced, their motivations, and their suggestions for improvement.
-This survey allowed us to connect more closely with the applicants perspectives and gain a
-deeper understanding of the problem. The more thoroughly we understand an issue, the easier
-it becomes to solve.</p>
-<p>With this foundation, we brainstormed ideas for the website that balanced creativity and
-practicality. Our goal was to create something engaging yet realistic to implement within the
-project’s timeframe. Deciding on the final features was one of the most challenging parts of the
-process—so many great ideas, yet so little time! After thorough discussion and feedback from
-the fire department, we ultimately settled on four main features.</p>
-<p>Working on this project also meant diving deep into the different entry opportunities at the fire
-department. Fortunately, the fire department provided us with all the information we needed.
-Once the features were decided, we moved on to implementation. As a team of seven, we
-divided into smaller groups, made weekly and bi-weekly sprints with each group focusing on
-one or two features. This approach allowed us to work efficiently and tackle multiple aspects
-simultaneously.</p>
-<p>Throughout the process, communication was critical. Regular updates, collaborative
-problem-solving, and a shared commitment kept the team aligned and motivated. The project
-coincided with holidays and exam season, which added pressure, but our teamwork and
-determination helped us overcome these challenges. We are proud to present the results of our
-hard work.</p>
+        <p>We started by analyzing the fire department’s website to spot issues and areas for improvement. Using website stats and feedback from 16 recent applicants, we gained insights into user needs and challenges.</p>
+<p>With this foundation, we brainstormed and prioritized creative yet practical ideas. After discussions with the fire department, we finalized four main features.</p>
+<p>Our team of seven worked in smaller groups, using sprints to stay organized and tackle tasks efficiently. Despite juggling holidays and exams, strong communication and teamwork kept us on track.</p>
+<p>We’re proud to share the results of our hard work!</p>
 
     </div>
 </section>
