--- a/ws24/bachelor/b3-helm-sucht-kopf/specialthanks/index.html
+++ b/ws24/bachelor/b3-helm-sucht-kopf/specialthanks/index.html
@@ -654,7 +654,7 @@ B3
             <h1>
                 <span class="type">B3 Bachelor</span>
                 Helm sucht Kopf
-             <span class="subtitle bachelor">Recruiting für die Berliner Feuerwehr</span>
+             <span class="subtitle bachelor">Recruiting for the Berlin Fire Department</span>
              <span class="underscore-spacer"></span>
             </h1>
             <section style="text-align: right;">
