deploy: htw-imi-showtime/showtime-website@6255c5b6d49a35ec2f79db2c92ff8c8a1a5ae52a

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 181453d 
-</p><p>AuthorDate: 2025-01-24 
-</p><p>AuthorEmail: 96808045&#43;namkhanh-nguyen@users.noreply.github.com 
-</p><p>AuthorName: Nam 
-</p><p>CommitDate: 2025-01-24 
-</p><p>Hash: 181453de08b5059bb236b9be9c78719365aa00c9 
-</p><p>Subject: B3 Helm sucht Kopf final website commented out until done (#425) 
+</p><p>AbbreviatedHash: 6255c5b 
+</p><p>AuthorDate: 2025-01-27 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
+</p><p>CommitDate: 2025-01-27 
+</p><p>Hash: 6255c5b6d49a35ec2f79db2c92ff8c8a1a5ae52a 
+</p><p>Subject: create showtime-date shortcut 
 </p>
 
 
