--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
     <h3>Project Fair &amp; Presentations</h3>
     <div>
         The Bachelor and Master students of the International Media and Computing Study Programs present their Practice Projects with presentations and a Project Fair.
-It&rsquo;ll be great to see  you on 02/08/2024 at 10:00 am for the presentations or between 12:00 and 15:00 for the fair in Room H001 on our <a href="https://www.htw-berlin.de/campus/campus-wilhelminenhof/">Campus Wilhelminenhof!</a>
+It&rsquo;ll be great to see  you on 07/02/2025
+at 10:00
+for the presentations or between 11:30
+and 15:00
+for the fair in Room H001 on our <a href="https://www.htw-berlin.de/campus/campus-wilhelminenhof/">Campus Wilhelminenhof!</a>
 <a href="schedule">-&gt; check_the_schedule</a>
     </div>
     <hr>
