deploy: htw-imi-showtime/showtime-website@a78d1e15c4cc2f21df59879bda5a1e2e0346e8ab

--- a/ws24/project_overview/index.html
+++ b/ws24/project_overview/index.html
@@ -551,7 +551,7 @@ project_id = "B5"
         <p><b>project_id:</b> B6</p>
         <p><b>title:</b> = Elara Health</p>
         <p><b>subtitle:</b> = Take Control of Your Health Recovery Journey</p>
-        <p><b>team:</b> [Luong Hoang Santiago Badaya Shuvam Sah Talha Tayyab Ha Luu Duy Anh Nguyen Simona Tröger] (string)</p>
+        <p><b>team:</b> [Luong Hoang Santiago Badaya Shuvam Kumar Sah Talha Tayyab Ha Luu Duy Anh Nguyen Simona Tröger] (string)</p>
         <p><b>supervisor:</b> Frederik Marquart (string)</p>
       
         <p><b>claim</b> =  Empowering ME/CFS Patients with AI-Driven Insights</p>
