deploy: htw-imi-showtime/showtime-website@41ca0e0cf2dd43fba388f85f81b936bc7b8ac4ad

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: a78d1e1 
+</p><p>AbbreviatedHash: 41ca0e0 
 </p><p>AuthorDate: 2025-01-27 
-</p><p>AuthorEmail: 85528467&#43;jameshnl232@users.noreply.github.com 
-</p><p>AuthorName: DumpyBird 
+</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
+</p><p>AuthorName: Barne Kleinen 
 </p><p>CommitDate: 2025-01-27 
-</p><p>Hash: a78d1e15c4cc2f21df59879bda5a1e2e0346e8ab 
-</p><p>Subject: B6 - elara health final (#428) 
+</p><p>Hash: 41ca0e0cf2dd43fba388f85f81b936bc7b8ac4ad 
+</p><p>Subject: add app link (#430) 
 </p>
 
 
