deploy: htw-imi-showtime/showtime-website@09df830d51a3ddbf9e268b77fdc01daf0ba9d019

--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 41ca0e0 
-</p><p>AuthorDate: 2025-01-27 
-</p><p>AuthorEmail: barne.kleinen@htw-berlin.de 
-</p><p>AuthorName: Barne Kleinen 
-</p><p>CommitDate: 2025-01-27 
-</p><p>Hash: 41ca0e0cf2dd43fba388f85f81b936bc7b8ac4ad 
-</p><p>Subject: add app link (#430) 
+</p><p>AbbreviatedHash: 09df830 
+</p><p>AuthorDate: 2025-02-02 
+</p><p>AuthorEmail: 96808045&#43;namkhanh-nguyen@users.noreply.github.com 
+</p><p>AuthorName: Nam 
+</p><p>CommitDate: 2025-02-02 
+</p><p>Hash: 09df830d51a3ddbf9e268b77fdc01daf0ba9d019 
+</p><p>Subject: B3 helm sucht kopf (#431) 
 </p>
 
 
