--- a/ws24/bachelor/b3-helm-sucht-kopf/specialthanks/index.html
+++ b/ws24/bachelor/b3-helm-sucht-kopf/specialthanks/index.html
@@ -743,8 +743,8 @@ B3
     <figcaption>Aaron, our cameraman</figcaption>
 </figure>
 <figure class="team-member">
-    <img src="/staging/ws24/bachelor/b3-helm-sucht-kopf/team/azubis.jpg" alt="Portrait of Berliner Feuerwehr Azubis">
-    <figcaption>Berliner Feuerwehr Azubis</figcaption>
+    <img src="/staging/ws24/bachelor/b3-helm-sucht-kopf/team/azubis.jpg" alt="Portrait of Emily, Duc, Paul">
+    <figcaption>Emily, Duc, Paul</figcaption>
 </figure>
 
 </section>
