--- a/hugo/history/index.html
+++ b/hugo/history/index.html
@@ -69,13 +69,13 @@
 
 
 <p>Gitinfo: 
-</p><p>AbbreviatedHash: 09df830 
+</p><p>AbbreviatedHash: 35b53ef 
 </p><p>AuthorDate: 2025-02-02 
-</p><p>AuthorEmail: 96808045&#43;namkhanh-nguyen@users.noreply.github.com 
-</p><p>AuthorName: Nam 
+</p><p>AuthorEmail: Yudan.Pan@Student.HTW-Berlin.de 
+</p><p>AuthorName: YudanPan 
 </p><p>CommitDate: 2025-02-02 
-</p><p>Hash: 09df830d51a3ddbf9e268b77fdc01daf0ba9d019 
-</p><p>Subject: B3 helm sucht kopf (#431) 
+</p><p>Hash: 35b53ef09f0e24906e3c44192772d62d2b05c223 
+</p><p>Subject: B4 - two images added/changed (#432) 
 </p>
 
 
